first pages (product page, login/reg, index.html tweaks

--- a/aurTest/login.html
+++ b/aurTest/login.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html>
 
-<!-- 
--2nd row of links spaced apart
--1st row of links sized up
--darker shade of blue
--->
+
 <head>
 <link rel="icon" type="image/png" href="images/extile.png">
-<title>Aurorus Collections - Home</title>
+<title>Aurorus Collections - Login</title>
 </head>
 
 <body>
@@ -29,40 +25,31 @@
 	
 </div>
 
-<div class="mainTiles">
-	<div class="MTheader">
-	<p class="latestTiles">LATEST</p>
-	<p class="featuredTiles">FEATURED </p>
-	<p class="eventsTiles">EVENTS </p>
+<div class="bodyHeader">
+<h2> LOGIN </h2>
+
+
+<div class="body">
+	<div class="email">
+		USERNAME <br>
+		<input type="text" id="email" name="email"><br><br>
 	</div>
 	
-	<div class="tiles">
-	<a href="annLatest1.html">
-	<img src="images/extile.png">
-	</a>
+	<div class="password">
+		PASSWORD<br>
+		<input type="password" id="email" name="email">
+		<br><br>
+	</div>
 	
-	<a href="annLatest2.html">
-	<img src="images/extile.png">
-	</a>
+	<div class="loginButton">
+		<button type="button">LOGIN</button><br><br>
+	</div>
 	
-	<a href="annFeatured1.html">
-	<img src="images/extile.png">
-	</a>
-	
-	<a href="annFeatured2.html">
-	<img src="images/extile.png">
-	</a>
-	
-	<a href="annEvents1.html">
-	<img src="images/extile.png">
-	</a>
-	
-	<a href="annEvents2.html">
-	<img src="images/extile.png">
-	</a>
-
+	<div class="register">
+		NEW TO THE SITE? <a href="register.html">REGISTER HERE!</a>
 	</div>
 </div>
+
 
 <div class="siteInfo">
 		<div class="about">
@@ -70,10 +57,13 @@
 		</div>
 		
 		<div class="location">
-		<h3>LOCATION</h3> <hr> <a href="https://maps.app.goo.gl/FZho1m487VLaBPDJ7"> B2 L3A COMMONWEALTH AVE., QUEZON CITY, PHILIPPINES</a>
+		<a href="https://maps.app.goo.gl/FZho1m487VLaBPDJ7"> B2 L3A COMMONWEALTH AVE., QUEZON CITY, PHILIPPINES</a>
 		<p> 0967 210 9361</p>
 		<p>INFO@AURORUS.ORG</p>
 		</div>
+</div>
+
+
 </div>
 
 
