included aurorus image banner

--- a/aurTest/index.html
+++ b/aurTest/index.html
@@ -28,7 +28,7 @@
 	</div>
 	
 </div>
-
+<img src="images/aurorus-home.png" width=50%>
 <div class="mainTiles">
 	<div class="MTheader">
 	<p class="latestTiles">LATEST</p>
