--- a/aurTest/singles.html
+++ b/aurTest/singles.html
@@ -24,9 +24,11 @@
 	</div>
 	
 </div>
+
 <img src="images/aurorus-home.png" width=50%>
+
 <div class="bodyHeader">
-<h2> PRODUCTS </h2>
+<h2> SINGLES </h2>
 
 
 <div class="body">
@@ -64,16 +66,7 @@
 		<button onclick="document.location='productview.html'">BUY NOW</button>
 	</div>
 	
-	<div class="itemDiv">
-		<div class="thumbnail">
-		<img src="images/extile.png">
-		</div>
-		<span class="itemName"> D-GTOC: DRACONIC OVERLORD THE END</span><br>
-		<span class="itemPrice"> PHP 500</span>
-		<span class="itemStock"> STOCK:10</span><br>
-		
-		<button onclick="document.location='productview.html'">BUY NOW</button>
-	</div>
+	
 	
 	
 	
